# my_rust_in_action

./: README.md
rust_in_action/a_chapter1_2/: Cargo.toml
rust_in_action/a_chapter1_2/src/: _2_3_numbers.rs  main.rs  string.md
rust_in_action/b_chapter1_3/: Cargo.toml
rust_in_action/b_chapter1_3/src/: _3_5_my_enums.rs  main.rs
rust_in_action/b_chapter1_3/src/doc/: crates.js  settings.html
rust_in_action/b_chapter1_3/src/doc/_3_my_file/: all.html  fn.report.html  struct.File.html
rust_in_action/b_chapter1_3/src/doc/implementors/core/fmt/: trait.Display.js
rust_in_action/c_chapter1_4/: ownership.md
rust_in_action/c_chapter1_4/src/: _4_18_clone_or_copy.rs  main.rs  primitive_values.rs
rust_in_action/grep_lite/src/: main.rs
rust_server_service_and_apps/ezytutors/: Cargo.toml  readme.md
rust_server_service_and_apps/ezytutors/tutor-nodb/: Cargo.toml
rust_server_service_and_apps/ezytutors/tutor-nodb/src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
rust_server_service_and_apps/scenario1/: Cargo.toml  readme.md
rust_server_service_and_apps/scenario1/http/src/: httprequest.rs  httpresponse.rs  lib.rs
rust_server_service_and_apps/scenario1/httpserver/: Cargo.toml
rust_server_service_and_apps/scenario1/httpserver/public/: health.html  index.html
rust_server_service_and_apps/scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
rust_server_service_and_apps/scenario1/tcpclient/src/: main.rs
rust_server_service_and_apps/scenario1/tcpserver/src/: main.rs
tests/basic/src/: main.rs
(+2 files in other folders)
